--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Livre / d&eacutefendu</title>
     <link rel="icon" href="./img/lele.jpg">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" bref="./img/ico.jpg">
 </head>
 <body>
     
