--- a/informatique.html
+++ b/informatique.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=>, initial-scale=1.0">
     <title>Livre / d&eacutefendu</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel"icon" href="./img/ico.jpg">
 </head>
 <body class="corps2">
     <nav class="navi">
