--- a/romans.html
+++ b/romans.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Livre / d&eacutefendu</title>
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel"icon" href="./img/ico.jpg">
+</head>
 </head>
 <body class="corps2">
   <nav class="navi">
