--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta property="og:type" content="website">
+<meta property="og:url" content="https://sitename.com/">
+<meta property="og:title" content="Livre défendu rar"/>
+<meta property="og:description" content="Tutorial..."/>
+<meta property="og:image" content=""./img/ico.jpg"/>
+<meta property="og:image:width" content="1200"/>
+<meta property="og:image:height" content="630"/>
+<meta property="og:image" content="./img/ico.png"/>
+<meta property="og:image:width" content="400"/>
+<meta property="og:image:height" content="400"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Livre / d&eacutefendu</title>
-    <link rel="icon" href="./img/lele.jpg">
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="icon" bref="./img/ico.jpg">
 </head>
 <body>
     
