--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta property="og:type" content="website">
-<meta property="og:url" content="https://sitename.com/">
+<meta property="og:url" content="https://github.com/wwwsitflexcom/LIvre-defendu.com/index.html">
 <meta property="og:title" content="Livre défendu rar"/>
-<meta property="og:description" content="Tutorial..."/>
+<meta property="og:description" content="vous avez pas besoind'argentpourlire des beaux livres"/>
 <meta property="og:image" content=""./img/ico.jpg"/>
 <meta property="og:image:width" content="1200"/>
 <meta property="og:image:height" content="630"/>
