--- a/informatique.html
+++ b/informatique.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+     <meta property="og:type" content="website">
+<meta property="og:url" content="https://github.com/wwwsitflexcom/LIvre-defendu.com/index.html">
+<meta property="og:title" content="Livre défendu rar"/>
+<meta property="og:description" content="vous avez pas besoind'argentpourlire des beaux livres"/>
+<meta property="og:image" content=""./img/ico.jpg"/>
+<meta property="og:image:width" content="1200"/>
+<meta property="og:image:height" content="630"/>
+<meta property="og:image" content="./img/ico.png"/>
+<meta property="og:image:width" content="400"/>
+<meta property="og:image:height" content="400"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=>, initial-scale=1.0">
     <title>Livre / d&eacutefendu</title>
