--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta property="og:type" content="website">
 <meta property="og:url" content="https://github.com/wwwsitflexcom/LIvre-defendu.com/index.html">
 <meta property="og:title" content="Livre défendu rar"/>
-<meta property="og:description" content="vous avez pas besoind'argentpourlire des beaux livres"/>
-<meta property="og:image" content=""./img/ico.jpg"/>
-<meta property="og:image:width" content="1200"/>
+<meta property="og:description" content="vous avez pas besoin d'argent pourlire des beaux livres"/>
+<meta property="og:image" content="https://wwwsitflexcom.github.io/LIvre-defendu.com/img/ico.jpg"/>
+<meta="og:image:width" content="1200"/>
 <meta property="og:image:height" content="630"/>
 <meta property="og:image" content="./img/ico.png"/>
 <meta property="og:image:width" content="400"/>
