--- a/romans.html
+++ b/romans.html
@@ -5,10 +5,10 @@
 <meta property="og:url" content="https://github.com/wwwsitflexcom/LIvre-defendu.com/index.html">
 <meta property="og:title" content="Livre Gratuit"/>
 <meta property="og:description" content="vous avez pas besoin d'argent pour lire des beaux livres"/>
-<meta property="og:image" content="https://wwwsitflexcom.github.io/LIvre-defendu.com/img/ico.jpg"/>
+<meta property="og:image" content="./img/ico.jpg"/>
 <meta property="og:image:width" content="1200"/>
 <meta property="og:image:height" content="630"/>
-<meta property="og:image" content="https://wwwsitflexcom.github.io/LIvre-defendu.com/img/ico.png"/>
+<meta property="og:image" content="./img/ico.png"/>
 <meta property="og:image:width" content="400"/>
 <meta property="og:image:height" content="400"/>
     <meta charset="UTF-8">
