--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
 <meta property="og:image" content="https://github.com/wwwsitflexcom/LIvre-defendu.com/ico.jpg"/>
 <meta="og:image:width" content="1200"/>
 <meta property="og:image:height" content="630"/>
-<meta property="og:image" content="https://github.com/wwwsitflexcom/LIvre-defendu.com/ico.jpg"/>
+<meta property="og:image" content="https://wwwsitflexcom.github.io/LIvre-defendu.co/ico.jpg"/>
 <meta property="og:image:width" content="400"/>
 <meta property="og:image:height" content="400"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Livre / défendu</title>
     <link rel="stylesheet" href="./css/style.css">
+<img src="ico.jpg">
 </head>
 <body>
     
