--- a/romans.html
+++ b/romans.html
@@ -16,6 +16,7 @@
     <title>Livre / défendu</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel"icon" href="./img/ico.jpg">
+    <img src="ico.jpg">
 </head>
 </head>
 <body class="corps2">
